force-app/main/default/objects/Permission__c/Permission__c.object-meta.xml
<CustomObject>
    <label>Permission</label>
    <nameField>
        <label>Permissions| Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Permissions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>