force-app/main/default/objects/Permission__c/fields/Can_Export__c.field-meta.xml
<CustomField>
    <fullName>Can_Export__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Export</label>
    <type>Checkbox</type>
</CustomField>