force-app/main/default/objects/Permission__c/fields/Permission_Type__c.field-meta.xml
<CustomField>
    <fullName>Permission_Type__c</fullName>
    <label>Permission Type</label>
    <referenceTo>Permission_Type__c</referenceTo>
    <relationshipLabel>Permissions</relationshipLabel>
    <relationshipName>Permissions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>